src/pages/HomePage.css
@font-face {
    font-family: "PP Mori";
    src: url("../assets/fonts/PPMori-Extralight.otf") format("opentype");
    font-weight: 200;
    font-style: normal;
}

@font-face {
    font-family: "PP Mori";
    src: url("../assets/fonts/PPMori-Regular.otf") format("opentype");
    font-weight: 400;
    font-style: normal;
}

@font-face {
    font-family: "PP Mori";
    src: url("../assets/fonts/PPMori-SemiBold.otf") format("opentype");
    font-weight: 600;
    font-style: normal;
}

@font-face {
    font-family: 'Thunder LC';
    src: url('../assets/fonts/Thunder-BoldLC.woff2') format("woff2");
    font-weight: 700;
    font-style: normal;
}

@font-face {
    font-family: 'Thunder LC';
    src: url('../assets/fonts/Thunder-SemiBoldLC.woff2') format("woff2");
    font-weight: 600;
    font-style: normal;
}

.home {
    justify-content: center;
    align-items: center;
    /* margin: 50px; */
}

.section {
    text-align: center;
    padding: 80px 0;
    margin: auto;
}

.banner {
    position: relative;
    margin: 80px auto 0px;
    overflow: hidden;
    max-height: 500px;
}

.banner-video {
    margin: auto;
}

.banner-text {
    text-align: center;
    margin-bottom: 40px;
}

.banner-text h1 {
    margin: 0;
    color: #1e1e21;
    font-size: 160px;
    font-family: "Thunder LC", sans-serif;
    margin-bottom: -16px;
    text-transform: uppercase;
}

.banner-text p {
    margin: 0;
    font-size: 22px;
    font-family: "PP Mori", sans-serif;
    font-weight: 400;
}

.subheading {
    font-family: "Thunder LC", sans-serif;
    font-size: 50px;
    color: #1e1e21;
    text-transform: uppercase;
}

.section.welcome {
    display: flex;
    flex-direction: column;
    text-align: center;
    align-items: center;
    padding: 60px 0 80px 0;
}

.section.welcome .body {
    text-align: center;
    max-width: 800px;
    font-size: 20px;
    font-weight: 400;
    line-height: 1.6em;
    margin: 0;
}

.button-var1 {
    display: flex;
    justify-content: center;
    margin-top: 40px;
}

.button-text-var1 {
    border-radius: 0px;
    background-color: #1e1e21;
    color: white;
    font-family: "PP Mori", sans-serif;
    font-size: 16px;
    text-decoration: none;
    padding: 12px 40px;
    border-radius: 30px;
    display: inline-block;
    transition: background-color 0.3s ease;
}

.button-text-var1:hover {
    background-color: black;
    color: white;
}

.button-text-var2 {
    border-radius: 5px;
    background-color: #1e1e21;
    color: white;
    font-family: "PP Mori", sans-serif;
    font-weight: 400;
    font-size: 16px;
    text-decoration: none;
    padding: 13px 0;
    width: 100%;
    display: inline-block;
    transition: background-color 0.3s ease;
    margin-top: 10px;
}

.button-text-var2:hover {
    background-color: black;
    color: white;
    border-color: black;
}

p.subtitle {
    margin: auto;
    font-size: 18px;
    line-height: 1.6em;
    width: 100%;
    color: #5c5c5c;
}

/* What do we do? Section */
.overview {
    text-align: center;
    justify-content: center;
}

.rect-container {
    display: flex;
    flex-wrap: wrap;
    justify-content: flex-start;
    gap: 20px;
    max-width: 1100px;
    margin: 0 auto;
    width: fit-content;
}

.rect {
    width: 350px;
    height: 350px;
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    border-radius: 8px;
    overflow: hidden;
    text-align: center;
}

.image-container {
    flex-grow: 1;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 80%;
}

.image-container img {
    max-width: 100%;
    max-height: 100%;
    object-fit: contain;
}

.text-container {
    height: 20%;
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 18px;
    color: #1e1e21;
    font-weight: 600;
}

/* Interactive Map Section */
.section.footprints {
    width: 90%;
}

.footprints-header {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 20px;
    text-align: center;
}

.footprints-text {
    max-width: 800px;
}

.footprints-image {
    width: 150px;
    height: 150px;
    object-fit: contain;
}

/* E-board */
.eboard-header {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 20px;
    text-align: center;
}

.eboard-text {
    max-width: 800px;
}

.firework-image {
    width: 180px;
    height: 180px;
    object-fit: contain;
}

/* Partnerships */
.section.sponsors {
    width: 80%;
    padding-bottom: 100px;
}

.logos-grid {
    padding-top: 40px;
    display: grid;
    grid-template-columns: repeat(3, 1fr); /* 3 columns */
    grid-template-rows: repeat(2, 1fr); /* 2 rows */
    gap: 10px; /* Adjust spacing */
    max-width: 600px; /* Adjust based on need */
    margin: auto;
}

.logo-container img {
    width: 100%; /* Adjust as needed */
    transition: filter 0.3s ease-in-out, opacity 0.3s ease-in-out, transform 0.3s ease-in-out; /* Smooth transition effect */
}

.greyed-out img {
    filter: grayscale(100%); /* Turns non-hovered images grey */
    opacity: 0.4; /* Optional: reduce opacity for a faded effect */
}
  
  .logo-container {
    width: 140px; /* Fixed square size */
    height: 140px;
    display: flex;
    justify-content: center;
    align-items: center;
    overflow: hidden;
  }
  
  .logo-container img {
    width: 100%;
    height: 100%;
    object-fit: contain;
  }  

.confetti-image {
    width: 300px;
    height: 300px;
    object-fit: contain;
}

